// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home page matches snapshot 1`] = `
<DocumentFragment>
  <div
    __self="[object Object]"
    __source="[object Object]"
    id="__next"
  >
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="stack"
    >
      <main
        __self="[object Object]"
        __source="[object Object]"
        class="stack anonymous-container"
      >
        <header
          __self="[object Object]"
          __source="[object Object]"
        >
          <span
            __self="[object Object]"
            __source="[object Object]"
            class="logo"
          >
            Hyödyntämätön
          </span>
        </header>
        <span
          __self="[object Object]"
          __source="[object Object]"
        >
          Simple beer app built on top of Untappd and Foursquare APIs.
        </span>
        <span
          __self="[object Object]"
          __source="[object Object]"
        >
          Work in progress.
        </span>
        <button
          __self="[object Object]"
          __source="[object Object]"
          class="btn"
        >
          Log in with your Untappd account
        </button>
      </main>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Home page matches snapshot when user is logged in 1`] = `
<DocumentFragment>
  <div
    __self="[object Object]"
    __source="[object Object]"
    id="__next"
  >
    <div
      __self="[object Object]"
      __source="[object Object]"
      class="stack"
    >
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="btn"
      >
        Pubs Nearby
      </button>
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="btn"
      >
        Beer Search
      </button>
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="btn"
      >
        Account
      </button>
      <button
        __self="[object Object]"
        __source="[object Object]"
        class="btn"
      >
        About
      </button>
    </div>
  </div>
</DocumentFragment>
`;
